# BTR

./: .env.example  activate.sh  daily.txt  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.kilo/: kilo copy.jsonc  kilo.jsonc
.kilo/agents/: bdd-ir-builder.md  orchestrator.md  robocop-validator.md  suite-builder.md
.kilo/rules/: global.md
bdd/features/: calculator.feature  mode_1.feature  sample.feature
bdd/ir/: calculator-ir.json  mode_1-ir.json  sample-ir.json
docs/: ARCHITECTURE.md  TEST_ARCHITECTURE.md
mcp/gherkin-sever/: server.py
mcp/rf-docs-server/: README.md  build_specs.py  config.py  pyproject.toml  server.py
mcp/rf-docs-server/specs/: BuiltIn.json  String.json  (+8 more)
mcp/rf-runner-server/: server.py
mcp/robocop-server/: __init__.py  __main__.py  config.py  mcp_check.py  mcp_format.py  server.py
pipeline/: PIPELINE_GUIDE.md  QUICK_REFERENCE.md  robocop_combined.json  robocop_report.json  run_pipeline.py  run_pipeline.sh  run_pipeline2.py  run_summary.json
pipeline/prompts/: build_bdd_ir_task.md  build_suite_task.md  orchestrator_task.md  validate_suite_task.md
pipeline/schemas/: bdd-ir.schema.json
robot/suites/: calculator_suite.robot  mode_1_suite.robot  sample_suite.robot  user_login_suite.robot
tests/: conftest.py
tests/coherence/: test_ir_coherence.py
tests/determinism/: test_repeatability.py
tests/evaluation/: test_deepeval_pipeline_outputs.py
tests/integration/: test_pipeline_dry_run.py
tests/perf/: test_generation_time.py
tests/traceability/: test_summary_traceability.py
tests/unit/: test_orchestrator.py
(+44 files in other folders)
