[project]
name = "btr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepeval>=4.0.6",
    "gherkin-official>=40.0.0",
    "mcp>=1.27.2",
    "rapidfuzz>=3.14.5",
    "robotframework>=7.4.2",
    "robotframework-robocop>=8.2.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

